@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2007,2009,2011 - TortoiseSVN
+// Copyright (C) 2003-2007,2009,2011-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -50,11 +50,6 @@ public:
     static std::string StdGetUTF8(const std::wstring& wide);
     static std::wstring StdGetUnicode(const std::string& utf8);
 };
-
-// necessary whenever an explict *A Windows API function needs to be
-// interacted with
-
-std::string WideToMultibyte(const std::wstring& wide);
 
 // resource handling utility
 
