@@ -43,6 +43,8 @@ Version 1.7.7
        browser takes too long. (Stefan)
 - BUG: Issue #254: status cache crash
        before closing it. (Stefan)
+- BUG: Issue #255: inconsistent unicode
+       conversion. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
